[package]
edition = "2021"
name = "winit-test"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7"
env_logger = "0.9"
nokhwa = {features = ["input-opencv"], version = "0.9.4"}
pixels = "0.9.0"
pollster = "0.2.5"
winit = "0.26.1"
